# Document_Reader_Using_RAG_Langchain_Streamlit

./: .gitignore  app.py  pyproject.toml
src/: search.py
